--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,8 @@ button:hover{
 
 ul li {
     list-style: none;
-    font-size: 18px;
+/*     font-size: 18px; */
+    font-size: 2rem;
     padding: 12px 20px 12px 50px;
     user-select: none;
     cursor: pointer;
@@ -106,6 +107,7 @@ ul li::before{
     top: 12px;
     left: 8px;
     font-family: 'Pacifico', cursive;
+    font-size: 2rem;
 
 }
 
